--- a/viewpagerdotsindicator-sample/src/main/res/layout/activity_main.xml
+++ b/viewpagerdotsindicator-sample/src/main/res/layout/activity_main.xml
@@ -88,5 +88,19 @@
       >
   </com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator>
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Recycler"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/spring_dots_indicator"/>
+
 
 </android.support.constraint.ConstraintLayout>
