--- a/viewpagerdotsindicator-sample/src/main/res/layout/activity_main.xml
+++ b/viewpagerdotsindicator-sample/src/main/res/layout/activity_main.xml
@@ -55,6 +55,7 @@
       android:layout_marginStart="8dp"
       android:layout_marginTop="16dp"
       app:dotsColor="@color/md_white_1000"
+      app:dotsStrokeColor="@color/md_amber_400"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/dots_indicator"
