--- a/viewpagerdotsindicator-sample/src/main/res/layout/activity_recycler.xml
+++ b/viewpagerdotsindicator-sample/src/main/res/layout/activity_recycler.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
-             android:layout_height="match_parent">
+             android:layout_height="match_parent"
+             android:background="@color/md_blue_500">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -22,8 +23,10 @@
         android:id="@+id/spring_dots_indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:dotsStrokeColor="@color/md_amber_400"
         android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginBottom="46dp"/>
+        android:layout_marginBottom="46dp"
+        app:dotsColor="#010b47"
+        app:dotsSize="11dp"
+        app:dotsStrokeColor="#dadada"/>
 
 </FrameLayout>
